--- a/_posts/2019-04-12-fast-exp.md
+++ b/_posts/2019-04-12-fast-exp.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "A Fast, Compact Approximation of the Exponential Function"
 date: 2019-06-04
-published: false
+published: true
 comments: true
 categories: [performance, machine_learning]
 tags: [performance, machine_learning, math]
