--- a/_posts/2019-06-04-fast-exp.md
+++ b/_posts/2019-06-04-fast-exp.md
@@ -8,7 +8,7 @@ categories: [performance, machine_learning]
 tags: [performance, machine_learning, math]
 ---
 
-The exponential function and specifically the natural exponential function `exp` is used often in machine learning, simulated annealing and many calculations within the sciences. Part of the reason why the natural exponential is so useful is that it is quite unique in that it is its own derivative. Put differently, the slope of the function is equal to its height! A fast non-tabel-lookup approximation of the natural exponential function would be very useful to accelerate many applications of `exp`.
+The exponential function and specifically the natural exponential function `exp` is used often in machine learning, simulated annealing and many calculations within the sciences. Part of the reason why the natural exponential is so useful is that it is quite unique in that it is its own derivative. Put differently, the slope of the function is equal to its height. A fast non-table-lookup approximation of the natural exponential function would be very useful to accelerate many applications of `exp`.
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
@@ -17,11 +17,11 @@ In 1999 Nicol N. Schraudolph published a note in Neural Computation 11, 853–86
 ## The Algorithm
 IEEE-754 floating point numbers are represented in the form $$(-1)^s (1 + m) 2^{x-x_0}$$. $$x_0$$ is the exponent bias. The 64-bit double precision format has 52 mantissa (m) bits, 11 exponent (x) bits, one sign (s) bit, $$x_0=1023$$ and exponents range from −1022 to 1023. 
 
-The bits may also be manipulated by accessing the memory of a 64-bit float as two 32-bit integers. One can, for example, raise the exponent of a number by directly setting the `x` bits in the high 32-bits of the 64-bit float. So setting the high bits to $$2^{20} (y + 1023)$$ sets the floating point value to $$2^y$$ for integer $y$.
+The bits may also be manipulated by accessing the memory of a 64-bit float as two 32-bit integers. One can, for example, raise the exponent of a number by directly setting the `x` bits in the high 32-bits of the 64-bit float. So setting the high bits to $$2^{20} (y + 1023)$$ sets the floating point value to $$2^y$$ for integer $$y$$.
 
-What is cool about the exponent in IEEE-754 is that the fractional part of an exponent may be allowed to flow over to the mantissa. The fractional part then naturally linearly 'interpolate' between $$2^y$$ and $$2^{y+1}$$ for example. 
+What is cool about the exponent in IEEE-754 is that the fractional part of an exponent may be allowed to flow over to the mantissa. The fractional part then naturally linearly 'interpolates' between $$2^y$$ and $$2^{y+1}$$ for example. 
 
-Now the final pieces of the solution are that $$e^x = 2^\frac{x}{\ln 2} = 2^y$$ for $$y=\frac{x}{\ln 2}$$ _and_ the $$\ln 2$$ constant can be pre-factored into the integer mantissa scale $$2^{20}$$ and exponent bias 1023. Note that the same method can similarly be used to approximate other exponential functions.
+Now the final pieces of the solution are that $$e^x = 2^\frac{x}{\ln 2} = 2^y$$ for $$y=\frac{x}{\ln 2}$$ _and_ the $$\ln 2$$ constant can be pre-factored into the integer mantissa scale $$2^{20}$$. Note that the same method can similarly be used to approximate other exponential functions.
 
 ## Some Code and Performance Results.
 The code for the double precision floating point version of the algorithm is shown below. The 'c' value has been set to zero so that fast_exp(0.0) = 0.0. Schraudolph's note has more details on how to set this value.
